--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "cors": "~2.8.5",
+    "mongoose": "^5.5.4"
   }
 }
